<resources>
    <string name="app_name">Dummy Face Detection</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_eigen_gallery">EigenGalleryActivity</string>
    <string name="action_clean_gallery">Clean gallery</string>
    <string name="action_calculate_eigen">Calculate eigen</string>
    <string name="action_load_eigen_images">Load eigen faces</string>
    <string name="action_load_gallery_images">Load gallery images</string>
    <string name="title_activity_detect">detectActivity</string>
    <string name="info_message">Informacion</string>
    <string name="compare_button_string">Ir a comparacion</string>
    <string name="eigen_button_string">Ver Eigenfaces</string>
    <string name="detection_button_string">Ir a deteccion</string>
    <string name="title_activity_compare_image">CompareImageActivity</string>
    <string name="invalid_images_string">Invalid Images</string>
    <string name="compare_string">Comparar imagenes</string>
    <string name="diferent_sizes_string">Tamanos de imagenes diferentes</string>
    <string name="missing_image_string">Falta una imagen</string>
</resources>
